# CREASE-2D

./: Data_Processing.ipynb  Features_6.csv  README.md  XGBoost_results.ipynb  XGBoost_training.py  ga_script.py  pyproject.toml  sampling_structural_features.py  scattering_calc.m  scattering_calc.py
CREASE Tutorials/: Calculate_1D_2D_Scattering_Profiles_from_3D_Structure.ipynb  Calculate_1D_Scattering_Profiles_from_3D_Structure.ipynb  ML_model_training&testing.ipynb  sample.dump
crease/: __init__.py  casgap.py  common.py  entrypoint.py  logger.py  utils.py
tutorials/: Calculate_1D_Scattering_Profiles_from_3D_Structure.ipynb  Calculate_2D_Scattering_Profiles_from_3D_Structure.ipynb  Genetic_Algorithm_Optimization.ipynb
